fixed sider squish issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
 .App {
   text-align: center;
+  max-width: 100%;
+  overflow-x: hidden;
 }
